...
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppinsbold"
        android:gravity="center"
        android:text="Sign In"

        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="10dp" >


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_text_field_styling"
            android:layout_height="55dp"
            android:fontFamily="@font/poppinsmedium"
            android:hint="Email"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="7dp"
            android:paddingLeft="10dp"
            android:background="@drawable/input_text_field_styling"
            android:fontFamily="@font/poppinsmedium"
            android:hint="Password"/>

        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppinsbold"
            android:text="Sign In"
            android:padding="18dp"
...
