...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


    <EditText
        android:id="@+id/descid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="314dp"
        android:layout_marginBottom="372dp"
        android:inputType="text"
        android:paddingLeft="30dp"
...
