<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">


    <Button
        android:id="@+id/like_button"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:layout_margin="8dp"
        android:background="@drawable/baseline_thumb_up_24"
        android:drawableStart="@drawable/baseline_thumb_up_24"
        android:drawablePadding="8dp"
        android:padding="8dp"
        android:text="Like"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/company_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:text="Company Name"
        android:fontFamily="@font/poppinsbold"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


    <Button
        android:id="@+id/info"
        android:layout_width="19dp"
        android:layout_height="25dp"
        android:layout_marginEnd="10dp"
        android:background="@color/black"
        android:textColor="@color/dark_royal_purple"
        android:hint="i"/>

</LinearLayout>

