...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logout"
        app:srcCompat="@drawable/baseline_preview_24"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/companies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_btn_styling"
        android:fontFamily="@font/poppinsbold"
        android:text="VIEW COMPANIES"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/searchC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="MissingConstraints" />
...
